[package]
name = "ledswarm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4.2"
actix-web-actors = "4.2"
rusqlite = "0.28.0"
serde_yaml = "0.9"
serde = { version = "1.0", features = ['derive'] }
swarm_protocol = { git = "https://github.com/LEDswarm/protocol" }